# tetris-web

./: .env.example  .gitignore  CLAUDE.md  HOW_TO_PLAY.md  README.md  main.py  product_spec.md  pygbag.json  pyproject.toml  run_online.py  server_simple.py  wrangler.toml
.github/workflows/: deploy-pygbag.yml
docs/: INTEGRATION_EXAMPLE.py  LEADERBOARD_SETUP.md  ONLINE_BATTLE.md  PROGRESS.md  SETUP_CHECKLIST.md  cloudflare-worker-online.js  cloudflare-worker.js
src/tetris/: __init__.py  battle_game.py  board.py  constants.py  game.py  leaderboard_manager.py  main.py  menu.py  mobile_online_battle.py  modes.py  network_manager.py  online_battle.py  pentomino.py  powerup.py  renderer.py  save_manager.py  tetromino.py  text_input.py  touch_controls.py
tests/: __init__.py
