[project]
name = "claire-tetris"
version = "0.1.0"
description = "A Tetris game with multiple modes and power-ups for Claire"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "pygbag>=0.9.2",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pyinstaller>=6.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tetris"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
